name:                recommend
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable recommend
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.8 && < 4.9
                     , binary >= 0.7
                     , directory
                     , hashable
                     , microlens == 0.3.*
                     , mtl == 2.*
                     , optparse-applicative == 0.11.*
                     , sqlite-simple == 0.4.*
                     , text
                     , unordered-containers == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
